--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           <h3 style="color: #182028;">哈囉拜訪者~~</h3>
           <p style="font-size: larger; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。
             遊戲對自己來說是很好的紓壓劑，從大學二年級起加入了系上的遊戲讀書會，在那裡大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現並與其他人互相討論一起成長。
-            進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，了解後發現沒有先前所認為的那般困難，又信心能夠嘗試更多新的可能，開拓自己的視野做出更多樣的遊戲。
+            進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，了解後發現沒有先前所認為的那般困難，也有信心能夠嘗試更多新的可能，開拓自己的視野做出更多樣的遊戲。
             讀研究所時與志同道合的朋友一起做遊戲參加各種比賽，那時與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
-            我想我可以幫自己總結"遊戲豐富了我的人生，而我也將以遊戲豐富他人而活"。</b></p>
+            </b></p>
         </div>
       </div>
   </div>
@@ -192,6 +192,7 @@
           <h4 class="card-header" style="background-color:#233d5a; color: #fafafa;">Shader</h4>
           <div class="card-body" style="background-color:#182028;">
             <ul class="card-text" style="font-size: large; color:#fafafa;">
+              <li>以學過的OpenGL基本渲染知識運用在Unity中</li>
               <li>利用 Stencil Buffer 實做物體被遮擋的提示效果</li>
               <li>將像素位移與RGB偏移呈現Glitch的畫面後處理</li>
               <li>2D遊戲的物體Outline效果</li>
