--- a/itemCOCOS.html
+++ b/itemCOCOS.html
@@ -184,6 +184,11 @@
           <img class="img-fluid" src="Image/collectionThumbOpenGL.png" alt="">
         </a>
       </div>
+      <div class="col-md-3 col-sm-6 mb-4">
+        <a href="itemGoDown.html">
+          <img class="img-fluid" src="Image/GoDown2.png" alt="">
+        </a>
+      </div>
       
     </div>
 
